// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Intelligence Pipeline E2E > Snapshots (Builder Sources) > celebration scenario - turn 5 1`] = `
[
  "critical:persona_identity",
  "hint:agent_identity",
  "hint:approach_guidance",
  "hint:awareness_deep",
  "hint:celebration_opportunity",
  "hint:cognitive-transition",
  "hint:conversation_forward_callback",
  "hint:conversation_forward_ending",
  "hint:conversational_natural_speech",
  "hint:deep_flow_curiosity",
  "hint:energy_mirroring",
  "hint:human_personality_timing",
  "hint:personalization",
  "hint:response_tuning",
  "hint:task_context",
  "hint:therapeutic_framework",
  "standard:arc_guidance",
  "standard:celebration",
  "standard:coaching",
  "standard:conversation_forward_explore",
  "standard:deep_hope",
  "standard:intent_empathy",
  "standard:life_event",
  "standard:methodology",
  "standard:spontaneous_delight",
  "standard:team_availability",
  "standard:team_locked",
  "standard:tool_humanization",
  "standard:unified_humanizing",
]
`;

exports[`Intelligence Pipeline E2E > Snapshots (Builder Sources) > deep conversation scenario - turn 10 1`] = `
[
  "critical:persona_identity",
  "high:tool-capabilities",
  "hint:agent_identity",
  "hint:approach_guidance",
  "hint:awareness_deep",
  "hint:callback_opportunity",
  "hint:celebration_opportunity",
  "hint:conversational_meta_moment",
  "hint:conversational_natural_speech",
  "hint:energy_mirroring",
  "hint:engagement",
  "hint:human_personality_timing",
  "hint:lovable_presence",
  "hint:natural_uncertainty",
  "hint:personalization",
  "hint:response_tuning",
  "hint:task_context",
  "hint:therapeutic_framework",
  "hint:unified_humanizing",
  "hint:vocab_mirror",
  "standard:arc_guidance",
  "standard:coaching",
  "standard:conversation_forward_explore",
  "standard:deep_flow",
  "standard:deep_hope",
  "standard:methodology",
  "standard:team_availability",
  "standard:team_locked",
  "standard:tool_humanization",
]
`;

exports[`Intelligence Pipeline E2E > Snapshots (Builder Sources) > distress scenario - turn 3 1`] = `
[
  "critical:emotional",
  "critical:emotional_crisis",
  "critical:persona_identity",
  "high:safety",
  "high:tool-capabilities",
  "hint:agent_identity",
  "hint:approach_guidance",
  "hint:awareness_deep",
  "hint:cognitive_distortion",
  "hint:conversational_natural_speech",
  "hint:deep_flow_curiosity",
  "hint:deep_resistance",
  "hint:energy_mirroring",
  "hint:human_personality_moment",
  "hint:human_personality_timing",
  "hint:persona_ei_distress",
  "hint:personalization",
  "hint:response_tuning",
  "hint:task_context",
  "hint:wisdom-synthesis",
  "hint:world_class_coaching",
  "standard:arc_guidance",
  "standard:deep_hope",
  "standard:intent_empathy",
  "standard:persona_boundary",
  "standard:team_availability",
  "standard:team_locked",
  "standard:tool_humanization",
  "standard:unified_humanizing",
  "standard:wisdom-synthesis",
]
`;

exports[`Intelligence Pipeline E2E > Snapshots (Builder Sources) > financial question scenario - turn 4 1`] = `
[
  "critical:persona_identity",
  "high:goal_detection",
  "hint:agent_identity",
  "hint:approach_guidance",
  "hint:awareness_deep",
  "hint:awareness_thinking",
  "hint:behavioral_economics",
  "hint:celebration_opportunity",
  "hint:cognitive-transition",
  "hint:conversation_forward_ending",
  "hint:conversational_natural_speech",
  "hint:conversational_quote_callback",
  "hint:deep_flow_curiosity",
  "hint:energy_mirroring",
  "hint:genuine_curiosity",
  "hint:human_personality_timing",
  "hint:personalization",
  "hint:response_tuning",
  "hint:task_context",
  "hint:therapeutic_framework",
  "hint:unified_humanizing",
  "hint:values_opportunity",
  "hint:vocab_mirror",
  "hint:wisdom-synthesis",
  "hint:world_class_coaching",
  "standard:arc_guidance",
  "standard:coaching",
  "standard:conversation_forward_explore",
  "standard:deep_hope",
  "standard:methodology",
  "standard:quality_negative",
  "standard:team_availability",
  "standard:team_locked",
  "standard:tool_humanization",
  "standard:wisdom-synthesis",
]
`;

exports[`Intelligence Pipeline E2E > Snapshots (Builder Sources) > greeting scenario - turn 1 1`] = `
[
  "critical:persona_identity",
  "high:tool-capabilities",
  "hint:agent_identity",
  "hint:approach_guidance",
  "hint:awareness_deep",
  "hint:awareness_thinking",
  "hint:callback_opportunity",
  "hint:cognitive-monologue",
  "hint:conversational_natural_speech",
  "hint:energy_awareness",
  "hint:energy_mirroring",
  "hint:human_personality_timing",
  "hint:personalization",
  "hint:response_length",
  "hint:response_tuning",
  "hint:task_context",
  "hint:unified_humanizing",
  "standard:anticipatory_presence",
  "standard:arc_guidance",
  "standard:coaching",
  "standard:deep_flow",
  "standard:deep_hope",
  "standard:team_availability",
  "standard:team_locked",
  "standard:tool_humanization",
]
`;

exports[`Intelligence Pipeline E2E > Snapshots (Builder Sources) > habits question scenario - turn 6 1`] = `
[
  "critical:persona_identity",
  "critical:role_boundary_violation",
  "hint:agent_identity",
  "hint:approach_guidance",
  "hint:awareness_deep",
  "hint:awareness_tangent",
  "hint:celebration_opportunity",
  "hint:cognitive-habit",
  "hint:conversational_natural_speech",
  "hint:energy_mirroring",
  "hint:ferni_quirk",
  "hint:human_personality_moment",
  "hint:human_personality_timing",
  "hint:lovable_presence",
  "hint:personalization",
  "hint:response_length",
  "hint:response_tuning",
  "hint:task_context",
  "hint:team_handoff",
  "hint:therapeutic_framework",
  "hint:unified_humanizing",
  "hint:vocab_mirror",
  "hint:world_class_coaching",
  "standard:arc_guidance",
  "standard:coaching",
  "standard:deep_flow",
  "standard:deep_hope",
  "standard:intent_advice",
  "standard:methodology",
  "standard:persona_boundary",
  "standard:team_availability",
  "standard:team_locked",
  "standard:tool_humanization",
]
`;
